--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/david-ogbonyomi-10b579135/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/davefem1/">Twitter</a>
-      <a class="footer-link" href="https://davidogbonyomi.journoportfolio.com/">Website</a>
+      <a class="footer-link" href="https://davidogbonyomi.journoportfolio.com">Website</a>
       <p class="copyright">© 2022 David Ogbonyomi.</p>
     </div>
 
