--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="skill-row">
           <img class="developer-icon" src="images/web-development.png" alt="Developer Icon">
           <h3>Design and Development</h3>
-          <p>I started learning Python joining a 100 days of Codes Bootcamp by Angela Yu on Udemy, after which I got a second course on Web Development.</p>
+          <p>I started learning Python by joining a 100 days of Codes Bootcamp by Angela Yu on Udemy, after which I got a second course on Web Development.</p>
         </div>
         <div class="skill-row">
           <img class="writer-icon" src="images/blogger.png" alt="Writer Icon">
